[package]
name = "tictactoe-tui"
version = "1.0.0"
edition = "2021"
authors = ["alfin.syahruddin@icloud.com"]
license = "MIT"
description = "Terminal based Tic-Tac-Toe Game."
readme = "README.md"
homepage = "https://github.com/alfinsyahruddin/tictactoe-tui"
repository = "https://github.com/alfinsyahruddin/tictactoe-tui"
keywords = ["cli", "tui", "tictactoe"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
rand = "0.8.5"
ratatui = "0.28.1"
